objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Processo de Vendas Ancar</fullName>
        <description>Processo de vendas padrão para Ancar</description>
        <isActive>true</isActive>
        <values>
            <fullName>Aguardando aprovação</fullName>
        </values>
        <values>
            <fullName>Aprovada</fullName>
        </values>
        <values>
            <fullName>Arquivada</fullName>
        </values>
        <values>
            <fullName>Desistência</fullName>
        </values>
        <values>
            <fullName>Em negociação</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposta enviada para o cliente</fullName>
        </values>
        <values>
            <fullName>Rejeitada</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_ABL_faturada__c</fullName>
        <label>ABL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Comissao__c</fullName>
        <label>Comissão</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Cotacao_sincronizada__c</fullName>
        <label>Cotação sincronizada</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Data_fim_de_vigencia__c</fullName>
        <label>Data de fim de vigência</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_inicio_de_vigencia__c</fullName>
        <label>Data de início de vigência</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Descricao_da_etapa__c</fullName>
        <label>Descrição da etapa</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Descricao_erro_integracao__c</fullName>
        <label>Descrição erro integração</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Etapa__c</fullName>
        <label>Etapa</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Gerente_do_proprietario__c</fullName>
        <formula>Owner.Manager.FirstName + &quot; &quot; +Owner.Manager.LastName</formula>
        <label>Gerente do proprietário</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Id_VS__c</fullName>
        <externalId>true</externalId>
        <label>Id_VS</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Marca__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Marca</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Marca</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Oportunidades de Marcas</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Marca_pretendida__c</fullName>
        <label>Marca pretendida</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Nome_da_marca__c</fullName>
        <formula>IF( ISBLANK(TW1_Marca__c) , TW1_Marca_pretendida__c ,TW1_Marca__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nome da marca</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Oportunidade_aprovada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Oportunidade aprovada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_OpportunityRecordTypeName__c</fullName>
        <formula>RecordType.Name</formula>
        <label>RecordTypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Possui_midia_inaugural__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Possui mídia inaugural</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Prazo__c</fullName>
        <label>Prazo (dias)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Quantidade_de_propriedades__c</fullName>
        <label>Quantidade de propriedades</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Frio</fullName>
                    <default>true</default>
                    <label>Frio</label>
                </value>
                <value>
                    <fullName>Morno</fullName>
                </value>
                <value>
                    <fullName>Quente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_VGL_AMM__c</fullName>
        <label>VGL AMM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_VGL_faturado__c</fullName>
        <label>VGL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_VGL_total__c</fullName>
        <label>VGL total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Valor__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>TW1_Marca__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>TW1_Shopping__c</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>TW1_Marca__c</columns>
        <columns>TW1_Shopping__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>notEqual</operation>
        </filters>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>TW1_Oportunidades_de_Loja</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TW1_VGL_faturado__c</columns>
        <columns>TW1_VGL_AMM__c</columns>
        <columns>TW1_VGL_total__c</columns>
        <columns>TW1_Shopping__c</columns>
        <columns>TW1_Marca__c</columns>
        <columns>TW1_Data_inicio_de_vigencia__c</columns>
        <columns>TW1_Data_fim_de_vigencia__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.TW1_Loja</value>
        </filters>
        <label>Oportunidades de Loja</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TW1_Oportunidades_de_Midia</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>TW1_Marca__c</columns>
        <columns>TW1_Marca_pretendida__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>TW1_Shopping__c</columns>
        <columns>TW1_Data_inicio_de_vigencia__c</columns>
        <columns>TW1_Data_fim_de_vigencia__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Oportunidade_Midia</value>
        </filters>
        <label>Oportunidades de Mídia</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Todas_Oportunidades</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>TW1_Shopping__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>TW1_Marca__c</columns>
        <columns>TW1_Marca_pretendida__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todas Oportunidades</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Oportunidade_Feiras_e_Eventos</fullName>
        <active>true</active>
        <businessProcess>Processo de Vendas Ancar</businessProcess>
        <description>Utilizar este tipo de registro para cadastrar oportunidades do tipo feiras e eventos.</description>
        <label>Oportunidade de Feiras e Eventos</label>
    </recordTypes>
    <recordTypes>
        <fullName>Oportunidade_Mall</fullName>
        <active>true</active>
        <businessProcess>Processo de Vendas Ancar</businessProcess>
        <description>Utilizar este tipo de registro para cadastrar oportunidades do tipo Mall.</description>
        <label>Oportunidade de Mall</label>
    </recordTypes>
    <recordTypes>
        <fullName>Oportunidade_Midia</fullName>
        <active>true</active>
        <businessProcess>Processo de Vendas Ancar</businessProcess>
        <description>Utilizar este tipo de registro para cadastrar oportunidades do tipo Mídia.</description>
        <label>Oportunidade de Mídia</label>
    </recordTypes>
    <recordTypes>
        <fullName>TW1_Loja</fullName>
        <active>true</active>
        <businessProcess>Processo de Vendas Ancar</businessProcess>
        <description>Utilizar este tipo de registro para cadastrar oportunidades do tipo loja.</description>
        <label>Oportunidade de Loja</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TW1_OportunidadeEvNaoAlteraFaseVendas</fullName>
        <active>false</active>
        <description>Impede que o EV altere o estágio de vendas da oportunidade com valores referentes a aprovação e integração.</description>
        <errorConditionFormula>AND( 
        OR(ISPICKVAL(StageName, &apos;Aprovada&apos;), 
              ISPICKVAL(StageName, &apos;Integrada&apos;) , 
              ISPICKVAL(StageName, &apos;Erro de integração&apos;), 
              ISPICKVAL(StageName,&apos;Rejeitada&apos;)
             ), 
         OR($User.ProfileId = &apos;00e0R000000IHSK&apos;, $User.ProfileId = &apos;00e0R000000Lum2&apos;),
         ISCHANGED(StageName) 
)</errorConditionFormula>
        <errorMessage>Você não tem permissão para alterar o estágio da proposta para o valor selecionado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TW1_OportunidadeEvitaEdicaoSeIntegrada</fullName>
        <active>false</active>
        <description>Evita que uma oportunidade com estágio &quot;Integrada&quot; seja alterada por usuários com perfil diferente de Admin.</description>
        <errorConditionFormula>AND( 
        OR( 
              AND(ISCHANGED(StageName), ISPICKVAL(PRIORVALUE(StageName),&apos;Integrada&apos;)), 
              ISPICKVAL(StageName,&apos;Integrada&apos;) 
             ), 
       NOT($Profile.Id = &apos;00e1I000000xiXe&apos;) 
)</errorConditionFormula>
        <errorMessage>Esta oportunidade não pode ser alterada pois já foi integrada.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TW1_OportunidadeExigeMarca</fullName>
        <active>false</active>
        <description>Exige o preenchimento do campo marca ou campo marca pretendida.</description>
        <errorConditionFormula>AND(ISBLANK(TW1_Marca__c),ISBLANK(TW1_Marca_pretendida__c), NOT(TW1_OpportunityRecordTypeName__c = &quot;Oportunidade de Feiras e Eventos&quot;))</errorConditionFormula>
        <errorMessage>Favor preencher o campo Marca ou o campo Marca pretendida.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TW1_OportunidadeIntegracaoSemAprovacao</fullName>
        <active>false</active>
        <description>Impede que o usuário envie a oportunidade para integração sem a aprovação do gerente regional.</description>
        <errorConditionFormula>AND(ISCHANGED(StageName),ISPICKVAL(StageName, &apos;Enviada para Integração&apos;) ,TW1_Oportunidade_aprovada__c = False)</errorConditionFormula>
        <errorMessage>A oportunidade só pode ser enviada para integração se estiver aprovada.</errorMessage>
    </validationRules>
</CustomObject>